force-app/main/default/objects/Term_And_Condition__c/Term_And_Condition__c.object-meta.xml
<CustomObject>
    <label>Term And Condition</label>
    <nameField>
        <label>Term And Condition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Terms And Conditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>