force-app/main/default/objects/Term_And_Condition__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <formula>IF( Is_TC_After__c == FALSE, HYPERLINK(&quot;/lightning/action/quick/Term_And_Condition__c.Edit_TC?objectApiName&amp;context=RECORD_DETAIL&amp;recordId=&quot;&amp; CASESAFEID(Id)&amp;&quot;&amp;backgroundContext=%2Flightning%2Fr%2FApplication__c%2F&quot;&amp;CASESAFEID(Application__c)&amp;&quot;%2Fview&quot;, &quot;Edit&quot; , &apos;_self&apos;), HYPERLINK(&quot;/lightning/action/quick/Term_And_Condition__c.Edit_TC_After?objectApiName&amp;context=RECORD_DETAIL&amp;recordId=&quot;&amp; CASESAFEID(Id)&amp;&quot;&amp;backgroundContext=%2Flightning%2Fr%2FApplication__c%2F&quot;&amp;CASESAFEID(Application__c)&amp;&quot;%2Fview&quot;, &quot;Edit&quot; , &apos;_self&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Action</label>
    <type>Text</type>
</CustomField>