force-app/main/default/objects/Term_And_Condition__c/fields/Hold_Description__c.field-meta.xml
<CustomField>
    <fullName>Hold_Description__c</fullName>
    <label>Hold Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>