force-app/main/default/objects/Term_And_Condition__c/fields/Is_Current_Step__c.field-meta.xml
<CustomField>
    <fullName>Is_Current_Step__c</fullName>
    <formula>CAA_Step__c = Application__r.CAA_Step__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Current Step</label>
    <type>Checkbox</type>
</CustomField>