force-app/main/default/objects/Term_And_Condition__c/fields/Is_Mine__c.field-meta.xml
<CustomField>
    <fullName>Is_Mine__c</fullName>
    <formula>OR(
  (CreatedById = $User.Id),
  ($User.Is_Debug_User__c )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Mine</label>
    <type>Checkbox</type>
</CustomField>