force-app/main/default/objects/Term_And_Condition__c/fields/Is_TC_FKD__c.field-meta.xml
<CustomField>
    <fullName>Is_TC_FKD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is TC FKD</label>
    <type>Checkbox</type>
</CustomField>