force-app/main/default/objects/Term_And_Condition__c/fields/TC_Type__c.field-meta.xml
<CustomField>
    <fullName>TC_Type__c</fullName>
    <label>TC Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AP_Prepaid</valueSetName>
    </valueSet>
</CustomField>