force-app/main/default/objects/Term_And_Condition__c/fields/TC_Value_Currency__c.field-meta.xml
<CustomField>
    <fullName>TC_Value_Currency__c</fullName>
    <label>TC Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>